# kaldi-openai-bridge

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
bridge/: __main__.py  app.py  audio.py  config.py  server.py  session.py  sse_parser.py  vllm_client.py
