[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaldi-openai-bridge"
version = "0.1.0"
description = "Bridge Kaldi speech recognition with OpenAI-compatible APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "kaldi-openai-bridge contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "websockets>=13.0",
]

[project.urls]
Homepage = "https://github.com/kaldi-openai-bridge/kaldi-openai-bridge"
Issues = "https://github.com/kaldi-openai-bridge/kaldi-openai-bridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["bridge"]
